@@ -45,6 +45,7 @@ repos:
           dnspython==2.1.0,
         ]
         files: lib/mysql
+        exclude: lib/mysqlx
         args: [
           --disallow-untyped-defs,
           --show-error-codes,
